Gian Angelo Dasigan - Homepage - 3

--- a/app/src/main/res/drawable/rounded_button_otp.xml
+++ b/app/src/main/res/drawable/rounded_button_otp.xml
@@ -8,7 +8,7 @@
 <!--        android:color="@color/secondary_green"-->
 <!--        />-->
 
-    <solid android:color="@color/tertiary_green"
+    <solid android:color="@color/tertiary_yellow"
         />
     <corners
         android:bottomRightRadius="100dp"
